<resources>
    <string name="app_name">MAV LIB</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">"Login"</string>
    <string name="forgot_password">"forgot password ?"</string>
    <string name="new_user">"new user"</string>
    <string name="confirm_password">"Confirm Password"</string>
    <string name="first_name">"First Name"</string>
    <string name="last_name">"Last Name"</string>
    <string name="register">"Register"</string>
    <string name="student_id">"Student ID"</string>
    <string name="title_activity_student">student</string>
    <string name="student">Student</string>
    <string name="checkout_books">Checkout Books</string>
    <string name="search_books">Search Books</string>
    <string name="view_reserved_or_checked_out_books">View Reserved/Checkedout Books</string>
    <string name="about">About MavLib</string>
    <string name="student_menu">Student Menu</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="manage_books">Manage Books</string>
    <string name="librarian_menu">Librarian Menu</string>
    <string name="checkin_books">Checkin Books</string>
    <string name="add_books">Add Books</string>
    <string name="remove_books">Remove Books</string>
    <string name="Or">Or</string>
    <string name="isbn">ISBN</string>
    <string name="author">Author</string>
    <string name="book_title">Title</string>
    <string name="book_image">book_image</string>
    <string name="category">Category</string>
    <string name="total">Total</string>
    <string name="delete_book">Delete Book</string>
    <string name="reserved_books">Reserved Books</string>
    <string name="checkedout_books">Checkedout Books</string>
    <string name="search_results">Search Results</string>
    <string name="view">View</string>
    <string name="reserve_book">Reserve Book</string>
    <string name="quantity">Quantity</string>
    <string name="notification">Notification</string>
    <string name="book_results">Book Results</string>
    <string name="Joel">Joel Friberg</string>
    <string name="Jacob">Jacob Sollner</string>
    <string name="Shiva">Shiva Katukoori</string>
    <string name="Ajinkya">Ajinkya Salvi</string>
    <string name="Vimlendra">Vimlendra Bouddh</string>
    <string name="Rajat">Rajat Chaudhary</string>
    <string name="about_us_content">MavLib is an app that will allow students and librarians to utilize library features from the convenience of an Android app.
        \n\n
        We hope that this app would be very useful as students can reserve books at ease in times like this(COVID-19) where people have to limit direct interaction.
        \n\n
        App Developers
    </string>


</resources>
