<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutUs">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="676dp"
        android:gravity="center"
        android:minHeight="?actionBarSize"
        android:padding="@dimen/appbar_padding"
        android:text="@string/about"
        android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="674dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title">


        <LinearLayout
            android:id="@+id/about_us_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/about_us_content"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/about_us_content"
                android:visibility="visible" />

            <ImageView
                android:id="@+id/Joel_Image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/Joel"
                android:visibility="visible"
                app:srcCompat="@mipmap/joel_foreground"

                />

            <TextView
                android:id="@+id/Joel_Text"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Joel"
                android:visibility="visible" />

            <ImageView
                android:id="@+id/Shiva_Image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/Shiva"
                app:srcCompat="@mipmap/shiva_foreground" />

            <TextView
                android:id="@+id/Shiva_Text"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Shiva" />

            <ImageView
                android:id="@+id/Jacob_Image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/Jacob"
                app:srcCompat="@mipmap/jacob_foreground" />

            <TextView
                android:id="@+id/Jacob_Text"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Jacob" />
            <ImageView
                android:id="@+id/Vimlendra_Image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/Vimlendra"
                app:srcCompat="@mipmap/vimlendra_foreground" />

            <TextView
                android:id="@+id/Vimlendra_Text"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Vimlendra" />

            <ImageView
                android:id="@+id/Ajinkya_Image"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/Ajinkya"
                app:srcCompat="@mipmap/ajinkya_foreground" />

            <TextView
                android:id="@+id/Ajinkya_Text"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Ajinkya" />

            <ImageView
                android:id="@+id/Rajat_Image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/Rajat"
                app:srcCompat="@mipmap/rajat_foreground" />

            <TextView
                android:id="@+id/Rajat_Text"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Rajat" />


        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>